--- a/style.css
+++ b/style.css
@@ -14,5 +14,5 @@
     background-repeat: repeat-x;
     animation: animatedBackground 10s linear infinite alternate;}
 
-.container{background-color: #ddd; padding: 25px;}
-.content{width: 100px; height: 100px; background-color: red;}
+#container{background-color: #ddd; padding: 25px;}
+#content{width: 100px; height: 100px; background-color: red;}
