--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ body {
     animation: gradient 15s ease infinite;
 }
 
+h1 {
+    animation: slide 2s linear 01s;
+}
+
+.container{
+    animation: appear 2s linear 01s;
+}
+
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
@@ -19,5 +27,50 @@ body {
     }
     100% {
         background-position: 0% 50%;
+    }
+}
+
+@keyframes slide {
+    0% {
+        opacity: 0%;
+        padding-right: 70%;
+    }
+    33% {
+        opacity: 30%;
+        padding-right: 0%;
+        padding-left: 40%;
+    }
+    80% {
+        opacity: 50%;
+        padding-left: 0%;
+        padding-right: 20%;
+    }
+    100% {
+        opacity: 100%;
+    }
+}
+@keyframes appear {
+    0% {
+        opacity: 0%;
+
+    }
+    20% {
+        opacity: 20%;
+    }
+
+    40% {
+        opacity: 40%;
+    }
+
+    60% {
+        opacity: 60%;
+    }
+
+    80% {
+        opacity: 80%;
+
+    }
+    100% {
+        opacity: 100%;
     }
 }
