--- a/style.css
+++ b/style.css
@@ -8,14 +8,35 @@ body {
     background: linear-gradient(-45deg, #ee7752, #e73c3c, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+
 }
 
 h1 {
-    animation: slide 2s linear 01s;
+    animation: slide 2s ease 0s forwards;
+    opacity: 0;
+    text-align: center;
+    margin:0;
+    padding: 30px;
+    font-family: 'Tourney',sans-serif;
+    font-size:40px;
+
+
 }
 
 .container{
-    animation: appear 2s linear 01s;
+    animation: appear 2s linear .2s forwards;
+    opacity: 0;
+
+
+}
+
+.pimage{
+    width: 432px;
+    height: 576px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px solid #555;
 }
 
 @keyframes gradient {
