--- a/style.css
+++ b/style.css
@@ -4,40 +4,177 @@ html, body {
     margin: 0;
 }
 
+
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c3c, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    display: block;
+    overflow: auto;
+    font-family: 'Arvo', serif;
 
 }
 
-h1 {
+.title{
     animation: slide 2s ease 0s forwards;
     opacity: 0;
     text-align: center;
-    margin:0;
+    margin-top:20px;
+    padding: 0;
+    font-family: 'Tourney',sans-serif;
+
+    white-space: nowrap;
+}
+
+.sub1{
+    animation: slide 2s ease 0s forwards;
+    opacity: 0;
+    text-align: center;
+    margin-top:60px;
+    padding: 30px;
+    padding-bottom: 0;
+
+
+    white-space: nowrap;
+}
+
+.sub2{
+    animation: slide 2s ease 0s forwards;
+    opacity: 0;
+    text-align: center;
+    margin-top:60px;
     padding: 30px;
     font-family: 'Tourney',sans-serif;
-    font-size:40px;
+    font-size:3vw;
     white-space: nowrap;
-
-
 }
 
 .container{
     animation: appear 2s linear .2s forwards;
     opacity: 0;
+    display: flex;
+
+
+    justify-content: center;
 
 
 }
 
+.cards{
+    margin: 15px 40px;
+
+}
+
+.card-text-title{
+    font-family: 'Arvo', serif;
+    font-size:1.5vw;
+
+    display: inline-block;
+
+}
+
+
+#PacMan{
+    height: auto;
+    width: 4vw;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    float: right;
+    max-width: 40px;
+    position: absolute;
+}
+
+#head-pac{
+    position: relative;
+}
+
+#eye-container{
+    position: relative;
+}
+
+.card-text{
+    font-family: 'Arvo', serif;
+    font-size:1.2vw;
+    display: inline-block;
+    text-align: center;
+    color:gray;
+    margin-left: 1vw;
+    margin-right: 1vw;
+
+}
+
+#pac-container{
+    display: inline-block;
+}
+
+#bio{
+    margin-top: 1vw;
+}
+
+#hanoi{
+    height: auto;
+    width: 6vw;
+    display: inline-block;
+    margin-left: 4vw;
+}
+
+#bus{
+    height: auto;
+    width: 4vw;
+    display: inline-block;
+}
+
 .pimage{
-    width: 432px;
-    height: 576px;
-    display: block;
+
+    height: auto;
+    width: 100%;
+
+    max-width: 400px;
+
     margin-left: auto;
     margin-right: auto;
     border: 5px solid #555;
+    margin-top: 10px;
+}
+
+
+.column {
+    float: left;
+    width: 33.33%;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.eyes {
+    position: absolute;
+    margin-top: 1.2vw;
+    width: 100%;
+    display: inline-block;
+
+}
+.eye {
+    width: 4vw;
+    height: 2vw;
+    background: #fff;
+    display: inline-block;
+    margin: .5vw;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+}
+.ball {
+    width: 1.5vw;
+    height: 1.5vw;
+    background: #000;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
 }
 
 @keyframes gradient {
