--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ body {
 #main-mobile {
     display: none;
 }
-@media (max-width:400px){
+@media screen and (max-width:400px){
     #main {
         display: none;
     }
