--- a/style.css
+++ b/style.css
@@ -138,12 +138,23 @@ body {
     width: 4vw;
     display: inline-block;
 }
+.container-video{
+    display: flex;
+    justify-content: center;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+}
+.video{
+    height: 17vw;
+    width: 30vw;
+
+    border: 5px solid #ddd;
+}
 .pimage{
     height: auto;
     width: 100%;
     max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+
     border: 5px solid #555;
     margin-top: 10px;
 }
@@ -230,7 +241,7 @@ body {
         font-size: 4vw;
     }
     .bio-contact{
-        font-size:4.6vw;
+        font-size:4vw;
     }
     .bio-column-1{
         white-space: normal;
@@ -276,6 +287,12 @@ body {
     }
     .pimage{
         margin-top: 0;
+    }
+    .video{
+        height: 40vw;
+        width: 70vw;
+
+        border: 5px solid #ddd;
     }
 }
 @keyframes gradient {
