--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ body {
     display: none;
 }
 @media screen and (max-width:500px){
+    body, html { overflow-x:hidden; }
     #main {
         display: none;
     }
